--- a/AFNT/Application/screens.kv
+++ b/AFNT/Application/screens.kv
@@ -100,7 +100,6 @@
             self.icon = "eye" if self.icon == "eye-off" else "eye-off"
             input_password.password = not input_password.password
 
-
 WindowManager:
     LoginScreen:
     RegistrationScreen:
@@ -110,6 +109,7 @@ WindowManager:
     WaterIntakeScreen:
     WaterIntakePlotsScreen:
     WorkoutHistoryScreen:
+    WorkoutAllocateScreen:
     ExerciseLogScreen:
     # WorkoutManager:
     # ExerciseManager:
@@ -1039,7 +1039,7 @@ WindowManager:
                         width: self.parent.width
                         background_normal: ''
                         background_color: 0.0, 0.8, 1, 1
-                        # on_release: root.update_row()
+                        on_release: root.switch_to_workout_allocate()
 
                 AnchorLayout:
                     anchor_x: "center"
@@ -1068,6 +1068,136 @@ WindowManager:
                         background_normal: ''
                         background_color: 0.0, 0.8, 1, 1
                         # on_release: root.switch_to_body_stats_plots(self, self.value)
+
+<WorkoutAllocateScreen>:
+    name: "workout_allocate_screen"
+    MDTopAppBar:
+        title: "Allocate Workouts"
+        bold: True
+        halign: 'center'
+        font_size: '24sp'
+        pos_hint: {"top": 1}
+        elevation: 4
+        left_action_items:
+            [["arrow-left", lambda x: root.switch_to_workout_history()]]
+        md_bg_color: 0, 0, 0.5, 
+    
+    ScrollView:
+        do_scroll_y: True
+        do_scroll_x: False
+        bar_width: 0
+        size_hint: (0.9, 0.85)
+        pos_hint: {'center_x': 0.5, 'top': 0.85}
+
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint: (None, None)
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            height: dp(700)
+            width: self.parent.width
+            spacing: 20
+            padding: 10
+            canvas.before:
+                Color:
+                    rgba: 0.95, 0.95, 0.95, 1
+                RoundedRectangle:
+                    size: self.size
+                    pos: self.pos
+                    radius: [10,]
+
+            GridLayout:
+                cols: 2
+                size_hint: (0.9, None)
+                width: self.parent.width
+                pos_hint: {"center_x": 0.5}
+                spacing: 10
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    MDTextField:
+                        id: workout_allocate_date
+                        hint_text: "Select date to add workout*"
+                        on_focus: root.handle_workout_allocate_date_input()
+
+                # AnchorLayout:
+                #     anchor_x: "center"
+                #     anchor_y: "center"
+
+                #     MDTextField:
+                #         id: workout_allocate_date_to
+                #         hint_text: "To *"
+                #         on_focus: root.handle_workout_allocate_date_to_input()
+
+            BoxLayout:
+                id: workout_allocate_datatable_box
+                orientation:'vertical'
+
+            GridLayout:
+                cols: 2
+                size_hint: (0.95, None)
+                width: self.parent.width
+                pos_hint: {"center_x": 0.5}
+                spacing: 10
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: remove_workout
+                        text: "Remove Workout"
+                        value: "remove_workout"
+                        size_hint_x: None
+                        background_normal: ''
+                        width: self.parent.width
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.remove_row()
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: edit_workout
+                        text: "Edit Workout"
+                        value: "edit_workout"
+                        size_hint_x: None
+                        width: self.parent.width
+                        background_normal: ''
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.update_row()
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: save
+                        text: "Save"
+                        value: "save"
+                        size_hint_x: None
+                        width: self.parent.width
+                        background_normal: ''
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.switch_to_workout_allocate()
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: create_workout
+                        text: "Create Workout"
+                        value: "create_workout"
+                        size_hint_x: None
+                        width: self.parent.width
+                        background_normal: ''
+                        background_color: 0.0, 0.8, 1, 1
+                        # on_release: root.switch_to_body_stats_plots(self, self.value)
+
+
 
 <ExerciseLogScreen>:
     name: "exercise_log_screen"
