Added comments to all Python files

--- a/AFNT/Application/screens.kv
+++ b/AFNT/Application/screens.kv
@@ -109,6 +109,11 @@ WindowManager:
     MealHistoryScreen:
     ArduinoWatchScreen:
     ArduinoWatchPlotsScreen:
+    MealAllocateSceen:
+    MealCreateScreen:
+    FoodItemLogScreen:
+    FoodItemLogAllocateScreen:
+    FoodItemAllocateScreen:
 
 <LoginScreen>:
     name: 'login_screen'
