Added Arduino Watch design and schematics, made minor improvements to AFNT App, updated logs and completed Design Chapter

--- a/AFNT/Application/screens.kv
+++ b/AFNT/Application/screens.kv
@@ -1796,7 +1796,7 @@ WindowManager:
                         background_normal: ''
                         width: self.parent.width
                         background_color: 0.0, 0.8, 1, 1
-                        # on_release: root.remove_row()
+                        on_release: root.remove_row()
 
                 AnchorLayout:
                     anchor_x: "center"
