--- a/AFNT/Application/screens.kv
+++ b/AFNT/Application/screens.kv
@@ -67,6 +67,16 @@
             pos: self.pos
             radius: [50] 
 
+<RoundedButtonDisabled@Button>:
+    background_color: (0, 0, 0, 0)
+    background_normal: ''
+    canvas.before:
+        Color:
+            rgba: 0, 0, 0, 0
+        RoundedRectangle:
+            size: self.size
+            pos: self.pos
+            radius: [50] 
 
 <ClickableTextFieldRound>:
     id: clickable_text_field_round
@@ -537,6 +547,21 @@ WindowManager:
                         center_x: self.parent.center_x
                         center_y: self.parent.center_y
 
+                RoundedButtonDisabled:
+                    size_hint_y: None
+                    height: "180dp"
+                    size_hint_x: None
+                    width: 0.80 * root.width
+                    user_font_size: "72sp"
+                    pos_hint: {'center_x': 0.5}
+                    # Image:
+                    #     source: 'img/smartwatch.png'
+                    #     size: (self.parent.height, self.parent.height)
+                    #     allow_stretch: False
+                    #     keep_ratio: False
+                    #     center_x: self.parent.center_x
+                    #     center_y: self.parent.center_y
+
 <BodyStatsScreen>:
     name: 'body_stats_screen'
     FloatLayout:
@@ -901,7 +926,7 @@ WindowManager:
         id: box1
         orientation: 'vertical'
         size_hint_y:.9
-        size_hint: (.7, 0.9)
+        size_hint: (.9, 0.9)
         pos_hint: {'center_x': 0.5, "top":1}
         spacing: 10
 
@@ -933,7 +958,7 @@ WindowManager:
         do_scroll_y: True
         do_scroll_x: False
         bar_width: 0
-        size_hint: (0.9, 0.85)
+        size_hint: (0.8, 0.85)
         pos_hint: {'center_x': 0.5, 'top': 0.85}
 
         BoxLayout:
@@ -1810,7 +1835,7 @@ WindowManager:
                         width: self.parent.width
                         background_normal: ''
                         background_color: 0.0, 0.8, 1, 1
-                        # on_release: root.update_row()
+                        on_release: root.update_row()
 
                 AnchorLayout:
                     anchor_x: "center"
@@ -1824,7 +1849,7 @@ WindowManager:
                         width: self.parent.width
                         background_normal: ''
                         background_color: 0.0, 0.8, 1, 1
-                        # on_release: root.switch_to_exercise_log()
+                        on_release: root.switch_to_food_item_log()
 
                 AnchorLayout:
                     anchor_x: "center"
@@ -1839,6 +1864,95 @@ WindowManager:
                         background_normal: ''
                         background_color: 0.0, 0.8, 1, 1
                         # on_release: root.switch_to_meal_allocate()
+
+<FoodItemLogScreen>:
+    name: "food_item_log_screen"
+    MDTopAppBar:
+        title: "Food Item Logs"
+        bold: True
+        halign: 'center'
+        font_size: '24sp'
+        pos_hint: {"top": 1}
+        elevation: 4
+        left_action_items:
+            [["arrow-left", lambda x: root.switch_to_meal_history()]]
+        md_bg_color: 0, 0, 0.5, 
+    
+    ScrollView:
+        do_scroll_y: True
+        do_scroll_x: False
+        bar_width: 0
+        size_hint: (0.9, 0.85)
+        pos_hint: {'center_x': 0.5, 'top': 0.85}
+
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint: (None, None)
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            height: dp(700)
+            width: self.parent.width
+            spacing: 20
+            padding: 10
+            canvas.before:
+                Color:
+                    rgba: 0.95, 0.95, 0.95, 1
+                RoundedRectangle:
+                    size: self.size
+                    pos: self.pos
+                    radius: [10,]
+
+            BoxLayout:
+                id: food_item_log_datatable_box
+                orientation:'vertical'
+
+            GridLayout:
+                cols: 2
+                size_hint: (0.95, None)
+                width: self.parent.width
+                pos_hint: {"center_x": 0.5}
+                spacing: 10
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: remove_food_item_log
+                        text: "Remove Food Item"
+                        value: "remove_food_item_log"
+                        size_hint_x: None
+                        background_normal: ''
+                        width: self.parent.width
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.remove_row()
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: edit_food_item_logs
+                        text: "Edit Food Item"
+                        value: "edit_food_item_logs"
+                        size_hint_x: None
+                        width: self.parent.width
+                        background_normal: ''
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.update_row()
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: allocate_food_item_logs
+                        text: "Allocate Food Item"
+                        value: "allocate_food_item_logs"
+                        size_hint_x: None
+                        width: self.parent.width
+                        background_normal: ''
+                        background_color: 0.0, 0.8, 1, 1
+                        # on_release: root.switch_to_food_item_log_allocate()
 
 <ArduinoWatchScreen>:
     name: "arduino_watch_screen"
