--- a/AFNT/Application/screens.kv
+++ b/AFNT/Application/screens.kv
@@ -554,13 +554,6 @@ WindowManager:
                     width: 0.80 * root.width
                     user_font_size: "72sp"
                     pos_hint: {'center_x': 0.5}
-                    # Image:
-                    #     source: 'img/smartwatch.png'
-                    #     size: (self.parent.height, self.parent.height)
-                    #     allow_stretch: False
-                    #     keep_ratio: False
-                    #     center_x: self.parent.center_x
-                    #     center_y: self.parent.center_y
 
 <BodyStatsScreen>:
     name: 'body_stats_screen'
@@ -1952,7 +1945,65 @@ WindowManager:
                         width: self.parent.width
                         background_normal: ''
                         background_color: 0.0, 0.8, 1, 1
-                        # on_release: root.switch_to_food_item_log_allocate()
+                        on_release: root.switch_to_food_item_log_allocate()
+
+<FoodItemLogAllocateScreen>:
+    name: "food_item_log_allocate_screen"
+    MDTopAppBar:
+        title: "Allocate Food Item Log"
+        bold: True
+        halign: 'center'
+        font_size: '24sp'
+        pos_hint: {"top": 1}
+        elevation: 4
+        left_action_items:
+            [["arrow-left", lambda x: root.switch_to_food_item_log()]]
+        md_bg_color: 0, 0, 0.5, 
+    
+    ScrollView:
+        do_scroll_y: True
+        do_scroll_x: False
+        bar_width: 0
+        size_hint: (0.9, 0.85)
+        pos_hint: {'center_x': 0.5, 'top': 0.85}
+
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint: (None, None)
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            height: dp(700)
+            width: self.parent.width
+            spacing: 20
+            padding: 10
+            canvas.before:
+                Color:
+                    rgba: 0.95, 0.95, 0.95, 1
+                RoundedRectangle:
+                    size: self.size
+                    pos: self.pos
+                    radius: [10,]
+
+            BoxLayout:
+                id: food_item_log_allocate_datatable_box
+                orientation:'vertical'
+            AnchorLayout:
+                anchor_x: "center"
+                anchor_y: "center"
+                size_hint: (0.95, None)
+                pos_hint: {"center_x": 0.5}
+                spacing: 10
+
+                Button:
+                    id: allocate_food_item_log
+                    text: "Allocate Food Item"
+                    value: "allocate_food_item"
+                    size_hint_x: None
+                    background_normal: ''
+                    width: self.parent.width
+                    background_color: 0.0, 0.8, 1, 1
+                    on_release: root.allocate_log_save_button()
+
+
 
 <ArduinoWatchScreen>:
     name: "arduino_watch_screen"
