--- a/AFNT/Application/screens.kv
+++ b/AFNT/Application/screens.kv
@@ -119,7 +119,7 @@ WindowManager:
     MealHistoryScreen:
     ArduinoWatchScreen:
     ArduinoWatchPlotsScreen:
-    MealAllocateSceen:
+    MealAllocateScreen:
     MealCreateScreen:
     FoodItemLogScreen:
     FoodItemLogAllocateScreen:
@@ -1856,7 +1856,232 @@ WindowManager:
                         width: self.parent.width
                         background_normal: ''
                         background_color: 0.0, 0.8, 1, 1
-                        # on_release: root.switch_to_meal_allocate()
+                        on_release: root.switch_to_meal_allocate()
+
+<MealAllocateScreen>:
+    name: "meal_allocate_screen"
+    
+    MDTopAppBar:
+        title: "Allocate meal"
+        bold: True
+        halign: 'center'
+        font_size: '24sp'
+        pos_hint: {"top": 1}
+        elevation: 4
+        left_action_items:
+            [["arrow-left", lambda x: root.switch_to_meal_history()]]
+        md_bg_color: 0, 0, 0.5, 
+
+    ScrollView:
+        do_scroll_y: True
+        do_scroll_x: False
+        bar_width: 0
+        size_hint: (0.9, 0.85)
+        pos_hint: {'center_x': 0.5, 'top': 0.85}
+
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint: (None, None)
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            height: dp(700)
+            width: self.parent.width
+            spacing: 20
+            padding: 10
+            canvas.before:
+                Color:
+                    rgba: 0.95, 0.95, 0.95, 1
+                RoundedRectangle:
+                    size: self.size
+                    pos: self.pos
+                    radius: [10,]
+            GridLayout:
+                cols: 2
+                size_hint: (0.9, None)
+                width: self.parent.width
+                pos_hint: {"center_x": 0.5}
+                spacing: 10
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    MDTextField:
+                        id: meal_allocate_date
+                        hint_text: "Select date to add meal*"
+                        on_focus: root.handle_meal_allocate_date_input()
+                
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    MDTextField:
+                        id: meal_allocate_time
+                        hint_text: "Select time to add meal*"
+                        on_focus: root.handle_meal_allocate_time_input()
+
+            BoxLayout:
+                id: meal_allocate_datatable_box
+                orientation:'vertical'
+
+            GridLayout:
+                cols: 2
+                size_hint: (0.95, None)
+                width: self.parent.width
+                pos_hint: {"center_x": 0.5}
+                spacing: 10
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: remove_meal
+                        text: "Remove Meal"
+                        value: "remove_meal"
+                        size_hint_x: None
+                        background_normal: ''
+                        width: self.parent.width
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.remove_row()
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: edit_meal
+                        text: "Edit Meal"
+                        value: "edit_meal"
+                        size_hint_x: None
+                        width: self.parent.width
+                        background_normal: ''
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.update_row()
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: save
+                        text: "Allocate Meal"
+                        value: "save"
+                        size_hint_x: None
+                        width: self.parent.width
+                        background_normal: ''
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.allocate_save_button()
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: allocate_exercise
+                        text: "Allocate Exercise"
+                        value: "allocate_exercise"
+                        size_hint_x: None
+                        width: self.parent.width
+                        background_normal: ''
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.switch_to_exercise_allocate()
+
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: create_meal
+                        text: "Create Meal"
+                        value: "create_meal"
+                        size_hint_x: None
+                        width: self.parent.width
+                        background_normal: ''
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.switch_to_meal_create()
+                
+                AnchorLayout:
+                    anchor_x: "center"
+                    anchor_y: "center"
+
+                    Button:
+                        id: create_food_item
+                        text: "Create Food Item"
+                        value: "create_food_item"
+                        size_hint_x: None
+                        width: self.parent.width
+                        background_normal: ''
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.switch_to_food_item_create()
+
+<MealCreateScreen>:
+    name: "meal_create_screen"
+
+    MDTopAppBar:
+        title: "Create Meal"
+        bold: True
+        halign: 'center'
+        font_size: '24sp'
+        pos_hint: {"top": 1}
+        elevation: 4
+        left_action_items:
+            [["arrow-left", lambda x: root.switch_to_meal_allocate()]]
+        md_bg_color: 0, 0, 0.5, 
+    
+    ScrollView:
+        do_scroll_y: True
+        do_scroll_x: False
+        bar_width: 0
+        size_hint: (0.9, 0.85)
+        pos_hint: {'center_x': 0.5, 'top': 0.80}
+
+        BoxLayout:
+            orientation: 'vertical'
+            size_hint: (None, None)
+            pos_hint: {'center_x': 0.5, 'center_y': 0.5}
+            height: dp(350)
+            width: self.parent.width
+            spacing: 20
+            padding: 10
+            canvas.before:
+                Color:
+                    rgba: 0.95, 0.95, 0.95, 1
+                RoundedRectangle:
+                    size: self.size
+                    pos: self.pos
+                    radius: [10,]
+            BoxLayout:
+                id: meal_create_box
+                orientation:'vertical'
+
+                MDTextField:
+                    id: meal_type_input
+                    hint_text: 'Select Type *'
+                    icon_right: "theme-light-dark"
+                    helper_text_mode: "on_error"
+                    helper_text: "select Meal type"
+                    multiline: False
+                    on_focus: root.show_meal_type_menu(meal_type_input)
+                    text: ""
+
+                MDTextField:
+                    id: meal_description_input
+                    hint_text: 'Enter Meal Description'
+                    icon_right: "food"
+                    multiline: True
+                    height: "200dp"
+
+                BoxLayout:
+                    orientation: 'horizontal'
+                    pos_hint: {"center_x": 0.5}
+
+                    Button:
+                        text: "Create"
+                        size_hint_x: None
+                        background_normal: ''
+                        width: self.parent.width
+                        background_color: 0.0, 0.8, 1, 1
+                        on_release: root.verify_meal_create_input()
 
 <FoodItemLogScreen>:
     name: "food_item_log_screen"
